<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_EEUU"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:elevation="24dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/card_ARG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView

                android:id="@+id/iv_flag_EEUU"
                android:layout_width="45dp"
                android:layout_height="32dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/flag"
                android:src="@drawable/icon_eeuu"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.047"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0" />

            <TextView
                style="@style/TextViewCard"
                android:id="@+id/textView"
                android:text="@string/dolarstring"
                app:layout_constraintBottom_toTopOf="@+id/convertEEUU"
                app:layout_constraintEnd_toStartOf="@+id/et_eeuuValue"
                app:layout_constraintStart_toEndOf="@id/iv_flag_EEUU"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                style="@style/EditTextCard"
                android:id="@+id/et_eeuuValue"
                android:hint="@string/value"
                android:inputType="text"
                app:layout_constraintBottom_toTopOf="@+id/convertEEUU"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/textView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="Autofill"
                tools:text="1030.1" />

            <Button
                style="@style/ButtonCard"
                android:id="@+id/convertEEUU"
                android:text="@string/convert"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView"
                tools:ignore="DuplicateSpeakableTextCheck" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_ARG"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:elevation="24dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/card_URU"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_EEUU"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView

                android:id="@+id/iv_flag_ARG"
                android:layout_width="45dp"
                android:layout_height="32dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/flag"
                android:src="@drawable/icon_arg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.047"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="ImageContrastCheck" />

            <TextView
                style="@style/TextViewCard"
                android:id="@+id/textView2"
                android:text="@string/dolarstring"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/et_argValue"
                app:layout_constraintStart_toEndOf="@id/iv_flag_ARG"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                style="@style/EditTextCard"
                android:id="@+id/et_argValue"
                android:hint="@string/value"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/textView2"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="1030.3"
                android:autofillHints="" />

            <Button
                style="@style/ButtonCard"
                android:id="@+id/convertARG"
                android:text="@string/convert"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_argValue"
                 />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_URU"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:elevation="24dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/card_EUR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_ARG"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView

                android:id="@+id/iv_flag_URU"
                android:layout_width="45dp"
                android:layout_height="32dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/flag"
                android:src="@drawable/icon_uru"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.047"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="ImageContrastCheck" />

            <TextView
                style="@style/TextViewCard"
                android:id="@+id/textView3"
                android:text="@string/dolarstring"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/et_uruValue"
                app:layout_constraintStart_toEndOf="@id/iv_flag_URU"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                style="@style/EditTextCard"
                android:id="@+id/et_uruValue"
                android:hint="@string/value"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/textView3"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="Autofill"
                tools:text="1030.5" />

            <Button
                style="@style/ButtonCard"
                android:id="@+id/convertURU"
                android:text="@string/convert"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_uruValue"
                 />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_EUR"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:elevation="24dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_URU"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView

                android:id="@+id/iv_flag_EUR"
                android:layout_width="45dp"
                android:layout_height="32dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/flag"
                android:src="@drawable/icon_eur"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.047"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="ImageContrastCheck" />

            <TextView
                style="@style/TextViewCard"
                android:id="@+id/textView4"
                android:text="@string/dolarstring"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/et_eurValue"
                app:layout_constraintStart_toEndOf="@id/iv_flag_EUR"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                style="@style/EditTextCard"
                android:id="@+id/et_eurValue"
                android:hint="@string/value"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/textView4"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="1030.2"
                android:autofillHints="" />

            <Button
                style="@style/ButtonCard"
                android:id="@+id/convertEUR"
                android:text="@string/convert"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_eurValue" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/reset"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/textstyle"
        android:text="@string/reset_values"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_EUR"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>